--- a/styles.css
+++ b/styles.css
@@ -713,6 +713,43 @@ p.p-services {
   margin-top: 40px;
 }
 
+/* Arrow up*/
+#backToTop {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 48px;
+  height: 48px;
+  background: linear-gradient(135deg, #5e3bb6, #9278c7);
+  color: white;
+  border: none;
+  border-radius: 999px;
+  cursor: pointer;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+}
+
+#backToTop:hover {
+  transform: scale(1.1);
+  background: linear-gradient(135deg, #5e3bb6, #9278c7);
+}
+
+#backToTop.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+svg {
+  width: 24px;
+  height: 24px;
+  stroke: currentColor;
+}
+
 /* Cases Section */
 .cases-section {
   padding: 40px 0;
