--- a/styles.css
+++ b/styles.css
@@ -54,10 +54,17 @@ body {
 .author-name a {
   color: #fff;
   text-decoration: none;
+  transition: all 0.3s ease;
 }
 
 .author-name a:hover {
   color: #a18cd1;
+}
+
+.logoimg {
+  height: 35px;
+  vertical-align: middle;
+  margin-right: 5px; /* gap between logo and txt */
 }
 
 .menu-links {
@@ -78,6 +85,7 @@ body {
   color: #fff;
   text-decoration: none;
   font-weight: bold;
+  transition: all 0.3s ease;
 }
 
 .nav-links li a:hover {
@@ -1053,6 +1061,25 @@ p.p-business-no-pad {
   padding: 20px 0;
   width: 100%;
   flex-shrink: 0;
+}
+
+.footer-link {
+  display: inline-flex;
+  align-items: center;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  margin-left:2px;
+  position: relative;
+  padding-right: 15px;
+}
+
+.footer-link svg {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 14px;
+  height: 14px;
 }
 
 /* Responsive Design */
