--- a/styles.css
+++ b/styles.css
@@ -696,6 +696,7 @@ p.p-services {
   opacity: 0;
   visibility: hidden;
   transition: all 0.3s ease-in-out;
+  z-index: 999;
 }
 
 #backToTop:hover {
