--- a/styles.css
+++ b/styles.css
@@ -671,6 +671,10 @@ p.p-services {
   font-weight: bold;
 }
 
+.highlight-bigger {
+  font-size: 1.2rem;
+}
+
 #sub {
   font-size: 0.8rem;
   text-align:center;
